apps/mosquitto/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
spec:
  type: ClusterIP
  selector:
    app: mosquitto  
  ports:
  - port: 8883
