apps/mosquitto/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mosquitto
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /
    app.kubernetes.io/name: mosquitto
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - mqtt.bensonphillips.dev
    secretName: mosquitto
  ingressClassName: "nginx"
  rules:
  - host: mqtt.bensonphillips.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mosquitto
            port: 
              number: 8883
